style.css
body {
	overflow-y: scroll;
}
.error {
	margin: 20px;
	overflow-x: scroll;
	font-family: monospace;
	white-space: pre;
}

#query-result,
#hide-explorer {
	display: none;
}

#query-error,
#query-error-short {
	display: none;
}

.graph-iframe {
	width: 100%;
	height: 90vh;
	border: none;
	margin: 0;
}

.error-line {
	border-bottom: 2px dotted red;
}

.error-character {
	background: lightsalmon;
}

.result {
	display: none;
}

#query-result pre {
	display: inline;
	font-family: serif;
	border: none;
	background-color: inherit;
	width: 900px;
	margin: 10px 30px;
	tab-size: 21;
	font-size: 12px;
	overflow: auto;
}

#query-result {
	width: 100%;
}

#result-browser-menu .glyphicon,
#result-browser-menu .fa {
	padding: 0 0.5em 0 0;
}

.cm-s-default .cm-bracket {
	color: #000;
}

.CodeMirror {
	border: 1px solid #ccc;
	height: auto !important;
}

.CodeMirror-scroll {
	min-height: 320px;
}

.CodeMirror-hint {
	max-width: 19em;
}

.queryEditor {
	border: 0;
	font-family: monospace;
	min-height: 273px;
	padding: 0;
	width: 100%;
}

pre.CodeMirror-placeholder {
	color: #777;
}

.exampleQueries {
	width: 160px;
}

.exampleIcons {
	width: 0;
}

iframe.shortUrl {
	border: none;
	width: 250px;
	height: 40px;
}

.query-main {
	max-width: 100%;
	display: flex;
	flex-direction: row;
}

.query-main .toolbar {
	flex: 0 0 auto;
	flex-basis: 55px;
	display: flex;
	flex-direction: column;
}

.query-helper-and-editor {
	flex: 1 1 auto;
	display: flex;
	flex-direction: row;
}

#query-box {
	position: relative;
}

#query-box .status {
	padding: 3px;
	font-size: 13px;
	min-height: 25px;
	color: #777;
	margin-bottom: 5px;
}
.dataUpdated > span:nth-child( 1 ) {
	padding: 5px;
}

#query-box .nav {
	margin-left: 0;
}

@media ( max-width: 900px ) {
	.CodeMirror-scroll {
		min-height: 150px;
	}
	.query-helper-and-editor {
		flex-direction: column;
	}
	.query-helper-and-editor > .splitter {
		display: none;
	}
}

#query-box .toolbar {
	width: 1.5em;
	border-right: 1px solid #bce8f1;
}

#query-box .toolbar .fa {
	font-size: 1.5em;
}

#query-box .toolbar-top {
	padding-top: 0.5em;
	vertical-align: top;
	text-align: left;
	opacity: 0.5;
}
#query-box .toolbar-top:hover {
	opacity: 1;
}

#query-box .toolbar-bottom {
	padding-top: 1em;
	vertical-align: bottom;
	text-align: center;
}

.query-editor-container {
	flex: 1 1 auto;
	width: 100%;
}

.splitter {
	flex: 0 0 auto;
	width: 1em;
	background: url( node_modules/jquery-resizable-dom/assets/vsizegrip.png ) center center no-repeat #eaf3ff; /* Accent90 */
	cursor: col-resize;
}

#query-box .toolbar-bottom .fa {
	font-size: 2em;
}

.jq-toast-single a {
	border: none;
}

/**
	Bootstrap Styles
**/
.navbar,
.alert {
	margin-bottom: 0;
}

.navbar .help {
	padding-left: 0;
}
.navbar-right {
	margin-right: 0;
}

.navbar .dropdown-menu {
	z-index: 1001; /* above the Leaflet control containers */
}

.popover {
	max-width: 500px;
	width: auto;
}

.dropdown-toggle .glyphicon:before,
.dropdown-toggle .fa:before {
	margin-right: 3px;
}

.navbar-brand {
	line-height: 35px;
	padding: 5px 15px;
}
.navbar-brand img {
	padding-right: 5px;
}
.navbar-toggle {
	z-index: 100;
}

.navbar-btn {
	margin-left: 15px;
}

.nav > li {
	float: left;
}

/* change navbar breakpoint */
@media ( max-width: 900px ) {
	.navbar-header {
		float: none;
	}
	.navbar-toggle {
		display: block;
	}
	.navbar-collapse {
		border-top: 1px solid transparent;
		box-shadow: inset 0 1px 0 rgba( 255, 255, 255, 0.1 );
	}
	.navbar-collapse.collapse {
		display: none !important;
	}
	.navbar-nav {
		float: none !important;
		margin: 7.5px -15px;
	}
	.navbar-nav > li > a {
		padding-top: 10px;
		padding-bottom: 10px;
	}
	.navbar-text {
		float: left;
		margin: 15px 0;
	}
	.navbar-collapse.collapse.in {
		display: block !important;
	}
	.collapsing {
		overflow: hidden !important;
	}
}

/*
	editor hint style
*/
.wikibase-rdf-hint {
	border-bottom: 1px solid gray;
	white-space: normal;
}

/**
	Query example dialog
**/

.QueryExamples .tagCloud {
	width: 100%;
	height: 200px;
}

.QueryExamples .tag {
	background-color: #337ab7;
	background-image: none;
}

.QueryExamples input.tags-input {
	visibility: hidden;
}

.QueryExamples .tagFilter {
	padding-bottom: 5px !important;
}

.QueryExamples .exampleTable {
	max-height: 500px;
	overflow-y: auto;
	overflow-x: hidden;
	border: 1px solid #ccc;
}

.explorer-panel {
	position: fixed;
	right: 0;
	bottom: 0;
	background-color: rgba( 255, 255, 255, 0.8 );
	z-index: 100;
	display: none;
	overflow: auto;
}

.explorer-panel iframe {
	height: 70vh;
	width: 50vw;
}

/* colors */

div.jqcloud {
	color: #337ab7;
}
div.jqcloud a {
	color: inherit;
}
div.jqcloud a:hover {
	color: #337ab7;
}
div.jqcloud span.w10 {
	color: rgba( 51, 122, 183, 1 );
}
div.jqcloud span.w9 {
	color: rgba( 51, 122, 183, 0.9 );
}
div.jqcloud span.w8 {
	color: rgba( 51, 122, 183, 0.8 );
}
div.jqcloud span.w7 {
	color: rgba( 51, 122, 183, 0.75 );
}
div.jqcloud span.w6 {
	color: rgba( 51, 122, 183, 0.6 );
}
div.jqcloud span.w5 {
	color: rgba( 51, 122, 183, 0.65 );
}
div.jqcloud span.w4 {
	color: rgba( 51, 122, 183, 0.5 );
}
div.jqcloud span.w3 {
	color: rgba( 51, 122, 183, 0.55 );
}
div.jqcloud span.w2 {
	color: rgba( 51, 122, 183, 0.4 );
}
div.jqcloud span.w1 {
	color: rgba( 51, 122, 183, 0.45 );
}

/* masonry */
.masonry {
	width: 95%;
	margin: 3em auto;
	margin: 1.5em 0;
	padding: 0;
	-moz-column-gap: 1.5em;
	-webkit-column-gap: 1.5em;
	column-gap: 1.5em;
	font-size: 0.85em;
}
.item > a > img {
	width: 100%;
	display: inline-block;
}
.item {
	display: inline-block;
	background: #fff;
	padding: 1em;
	margin: 0 0 1.5em;
	width: 100%;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-shadow: 2px 2px 4px 0 #ccc;
}

@media only screen and ( min-width: 400px ) {
	.masonry {
		-moz-column-count: 2;
		-webkit-column-count: 2;
		column-count: 2;
	}
}

@media only screen and ( min-width: 700px ) {
	.masonry {
		-moz-column-count: 3;
		-webkit-column-count: 3;
		column-count: 3;
	}
}

@media only screen and ( min-width: 900px ) {
	.masonry {
		-moz-column-count: 4;
		-webkit-column-count: 4;
		column-count: 4;
	}
}

@media only screen and ( min-width: 1100px ) {
	.masonry {
		-moz-column-count: 5;
		-webkit-column-count: 5;
		column-count: 5;
	}
}

@media only screen and ( min-width: 1280px ) {
	.wrapper {
		width: 1260px;
	}
}

/*
	ActionBar
*/

.action-bar .progress {
	height: 30px;
	font-size: 30px;
}
.action-bar .progress-bar {
	font-size: 16px;
	line-height: 30px;
	font-weight: bold;
}

.action-bar .label {
	display: block;
	font-size: 16px;
	line-height: 20px;
}

.action-bar {
	display: none;
}

/*
	Treemap
*/
#query-result .labelbody {
	background: transparent;
	overflow: hidden;
	cursor: pointer;
}

/*
	Visual Editor
*/

.query-helper {
	flex: 0 0 auto;
	min-width: 300px;
	z-index: 100;
}

.query-helper .panel {
	border: none;
	margin: 0 1em 0 1em;
}

.query-helper .panel-info {
	background: rgba( 255, 255, 255, 0.9 );
}

.query-helper .panel-heading {
	background: rgba( 255, 255, 255, 0.9 );
	padding: 8px 10px;
}

.query-helper .panel-body {
	font-size: 120%;
	padding: 10px;
}

.select2-container {
	z-index: 2000;
	min-width: 200px;
}
.query-helper .popover {
	min-width: 250px;
	white-space: nowrap;
}

.query-helper-hidden {
	display: none;
}
.query-helper-hidden + .splitter {
	display: none;
}

/*
	ULS
*/

.nav .uls-trigger {
	display: none;
	padding-left: 30px;
}

/*
	VIS
*/
.vis-item {
	padding: 15px;
	box-shadow: 5px 5px 20px rgba( 0, 0, 0, 0.2 );
}

.vis-item.vis-selected {
	background-color: white;
	border-color: #888a85;
}

.vis-item,
.vis-item.vis-line {
	background-color: white;
	border-color: #888a85;
}

/* T163984 */
.vis-item.vis-range:hover {
	/*
	 * let hovered timeline ranges expand to fit their content
	 * (needs !important because width is set directly on the element)
	 */
	width: unset !important;
	/* also draw them over other, non-hovered ranges */
	z-index: 100;
}

/*
	MultiDimensionResultBrowser
*/

#query-result .foreground path {
	fill: none;
	stroke: #222;
	stroke-opacity: 0.4;
	pointer-events: none;
	stroke-width: 3px;
}

#query-result .axis .title {
	font-size: 8px;
	font-weight: bold;
	text-transform: uppercase;
	transform: rotate( -12deg ) translate( -5px, -6px );
}

#query-result .axis line,
#query-result .axis path {
	fill: none;
	stroke: #000;
	stroke-width: 1px;
}

#query-result .brush .extent {
	fill-opacity: 0.3;
	stroke: #fff;
	stroke-width: 1px;
}

